# touchcam

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
scripts/: run_touchcam.py
src/touchcam/: __init__.py  calibration.py  cli.py  config.py  controller.py  detection.py  gui.py  main.py  pipeline.py
